<resources>
    <string name="app_name">Campus Assistance</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_course">Course</string>
    <string name="nav_score">Score</string>
    <string name="nav_tools">Tools</string>
    <string name="setting">Settings</string>
    <string name="nav_me">My Info</string>
    <string name="about">About</string>
    <string name="nav_lab">Library</string>
    <string name="login_bar">Login</string>
    <string name="btn_login">Login</string>
    <string name="usr_hint">Email or Phone</string>
    <string name="pwd_hint">Password</string>
    <string name="third_login">Third-Party Login</string>
    <string name="title_activity_settings">Settings</string>

    <string name="register">Register</string>
    <string name="register_bar">Register Page</string>
    <string name="re_pwd_hint">Reinput Password</string>
    <string name="btn_register">Register</string>
    <string name="usr_error">The Username is duplicated</string>

    <string name="about_version">Version</string>
    <string name="about_update">Check Update</string>
    <string name="about_suggestion">Give Suggestions</string>

    <array name="list_about">
        <item>Version</item>
        <item>Check Update</item>
        <item>Give Suggestions</item>
    </array>

    <array name="list_coder">
        <item>Follow us</item>
        <item>About Developer</item>
    </array>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_login_test">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="about_png">
        <item>@drawable/ic_error_outline_black_24dp</item>
        <item>@drawable/ic_perm_device_information_black_24dp</item>
        <item>@drawable/ic_feedback_black_24dp</item>
    </string-array>

    <string-array name="coder_png">
        <item>@drawable/ic_favorite_border_black_24dp</item>
        <item>@drawable/github_xxhdpi</item>
    </string-array>

    <string-array name="course_shape">
        <item>@drawable/course_cyan</item>
        <item>@drawable/course_indigo</item>
        <item>@drawable/course_pink</item>
        <item>@drawable/course_shape</item>
        <item>@drawable/course_teal</item>
    </string-array>

    <string-array name="bg_img">
        <item>@drawable/bg</item>
        <item>@drawable/bg1</item>
        <item>@drawable/bg2</item>
        <item>@drawable/bg3</item>
        <item>@drawable/bg4</item>
        <item>@drawable/bg5</item>
    </string-array>

    <string-array name="info_img">
        <item>@drawable/ic_perm_identity_black_24dp</item>
        <item>@drawable/ic_face_black_24dp</item>
        <item>@drawable/ic_bookmark_black_24dp</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_hint">Search Course Name</string>
    <string name="info_bar">My Info</string>
    <string name="title_activity_timetable">TimetableActivity</string>

    <string name="nav_news">News</string>

    <string-array name="year">
        <item>大一</item>
        <item>大二</item>
        <item>大三</item>
        <item>大四</item>
    </string-array>

    <string-array name="term">
        <item>第一学期</item>
        <item>第二学期</item>
    </string-array>
    <string name="lost_img_transition">lost_img_transition</string>

    <string-array name="tool_items">
        <item>成绩查询</item>
        <item>失物招领</item>
        <item>小纸条</item>
    </string-array>

    <string-array name="tools_icon">
        <item>@drawable/ic_book_black_48dp</item>
        <item>@drawable/ic_credit_card_black_48dp</item>
        <item>@drawable/ic_chrome_reader_mode_black_48dp</item>

    </string-array>

    <string-array name="lost_cate">
        <item>校园卡</item>
        <item>学生证</item>
        <item>其他类别</item>
    </string-array>
    <string name="title_activity_lost_history">LostHistoryActivity</string>
</resources>
