<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.morho.mytest.RegActivity">

    <include
        android:id="@+id/reg_toolbar"
        layout="@layout/app_bar_ot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reg_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="60dp">


        <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/usr_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/usr_hint"
                android:inputType="textPersonName"
                android:theme="@style/edit_theme" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/pwd_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/pwd_hint"
                android:inputType="textPassword"
                android:theme="@style/edit_theme" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/re_pwd_text"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/re_pwd_hint"
                android:inputType="textPassword"
                android:theme="@style/edit_theme" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/register_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_register"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"
            android:onClick="do_register"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
